<resources>
    <string name="STR_ACCESSORY_CAUTION_BACKUP_WATCH">This update shouldn\'t affect your personal data, but it\'s always a good idea to back up any important data just in case.</string>
    <string name="STR_ACCESSORY_CAUTION_EARBUDS">You won\'t be able to use your earbuds while installing the update.</string>
    <string name="STR_ACCESSORY_CAUTION_SETTINGS_MAY_CHANGE_EARBUDS">Some settings for your earbuds may change.</string>
    <string name="STR_ACCESSORY_CAUTION_SETTINGS_MAY_CHANGE_WATCH">Some settings on your watch may change.</string>
    <string name="STR_ACCESSORY_CAUTION_TITLE">Caution</string>
    <string name="STR_ACCESSORY_CAUTION_WATCH">You won\'t be able to use your watch while installing the update.</string>
    <string name="STR_ACCESSORY_CONNECTING_EARBUDS">Talking to your earbuds…</string>
    <string name="STR_ACCESSORY_CONNECTING_WATCH">Connecting to watch…</string>
    <string name="STR_ACCESSORY_CONNECTION_FAILED_EARBUDS">Connect to both your earbuds to update your software.</string>
    <string name="STR_ACCESSORY_CONNECTION_FAILED_WATCH">Make sure your watch is connected to your phone using Bluetooth and try again.</string>
    <string name="STR_ACCESSORY_COPY_FAILED_EARBUDS">Couldn\'t copy the software update to your earbuds.</string>
    <string name="STR_ACCESSORY_COPY_FAILED_WATCH">Couldn\'t copy the software update to your watch.</string>
    <string name="STR_ACCESSORY_COPY_PROGRESS">Copying update…</string>
    <string name="STR_ACCESSORY_COPY_RETRY_EARBUDS">An update for your earbuds was interrupted and didn\'t finish installing.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_EARBUDS_TITLE">Continue earbuds software update?</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_EARBUDS">Couldn\'t copy the software update to your earbuds. Try again later.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_LATER_WATCH">Couldn\'t copy the software update to your watch. Try again later.</string>
    <string name="STR_ACCESSORY_COPY_RETRY_WATCH">Couldn\'t copy the software update to your watch. Try again?</string>
    <string name="STR_ACCESSORY_CURRENT_VERSION">Current version: %s</string>
    <string name="STR_ACCESSORY_DOWNLOAD_AND_UPDATE_CONFIRM_TITLE">Update your earbuds</string>
    <string name="STR_ACCESSORY_DOWNLOAD_CONFIRM_TITLE">Update your watch</string>
    <string name="STR_ACCESSORY_DOWNLOAD_CONFIRM_WIFI_SETTINGS_DETAILS">Using mobile data to download this update may result in additional charges. Using Wi-Fi is recommended.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_COULDNT_COMPLETE_DOWNLOAD_TITLE">Couldn\'t complete download</string>
    <string name="STR_ACCESSORY_DOWNLOAD_COULDNT_DOWNLOAD_UPDATE_TITLE">Couldn\'t download update</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED">Download failed.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_DELTA_OVER_SIZE">This software update cannot be downloaded via a mobile network. It exceeds the maximum size allowed. If possible, download this update via a Wi-Fi network.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_NETWORK_DISCONNECTED_PHONE">Your phone disconnected from the network. The download will restart when it reconnects.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_NETWORK_DISCONNECTED_TABLET">Your tablet disconnected from the network. The download will restart when it reconnects.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_FAILED_WIFI_DISCONNECTED">Connect to a Wi-Fi network to continue downloading the update.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_PROGRESS">Downloading update…</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM">The update package has not been downloaded completely. Mobile networks are available. Downloading via a mobile network may result in additional charges. If possible, download via a Wi-Fi network.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM_VIA_WIFI_PHONE">Your phone is now connected to Wi-Fi.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM_VIA_WIFI_TABLET">Your tablet is now connected to Wi-Fi.</string>
    <string name="STR_ACCESSORY_DOWNLOAD_RETRY_CONFIRM_VIA_WIFI_TITLE">Continue downloading update?</string>
    <string name="STR_ACCESSORY_FORCE_INSTALL_CONFIRM_TITLE_WATCH">Critical update available</string>
    <string name="STR_ACCESSORY_FORCE_INSTALL_CONFIRM_WATCH">Your watch will restart in %d seconds to start updating.</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_SCHEDULED">Update will be installed automatically at %1$s on %2$s.</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_SCHEDULED_TIMEPICKER_SET_TIME_TOAST_TEXT">Update will be installed automatically at %1$s on %2$s.</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_SCHEDULED_TIMEPICKER_TITLE">Install the update at</string>
    <string name="STR_ACCESSORY_INSTALL_CONFIRM_TITLE_WATCH">Update your watch</string>
    <string name="STR_ACCESSORY_LAST_SUCCESSFUL_UPDATE">Last successful update</string>
    <string name="STR_ACCESSORY_LAST_UPDATE_DAY_TIME">%1$s at %2$s</string>
    <string name="STR_ACCESSORY_LAST_UPDATE_TITLE">Last update</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_EARBUDS">Charge your earbuds to at least %d%%, then try again.</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_TITLE">Battery low</string>
    <string name="STR_ACCESSORY_LOW_BATTERY_WATCH">Charge your watch to at least %d%%, then try again.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_COPY_WATCH">To copy this update, free up at least %1$s %2$s of space on your watch. You can do this by deleting any apps, files, or watch faces you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_DOWNLOAD_PHONE">To download this update, free up at least %s MB of space on your phone. You can do this by moving files and data to the cloud or deleting any apps or files you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_DOWNLOAD_TABLET">To download this update, free up at least %s MB of space on your tablet. You can do this by moving files and data to the cloud or deleting any apps or files you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_DOWNLOAD_WATCH">To download this update, free up at least %1$s %2$s of space on your watch. You can do this by deleting any apps, files, or watch faces you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_INSTALL_WATCH">To install this update, free up at least %1$s %2$s of space on your watch. You can do this by deleting any apps, files, or watch faces you no longer use.</string>
    <string name="STR_ACCESSORY_LOW_MEMORY_TITLE">Not enough space</string>
    <string name="STR_ACCESSORY_MODIFIED">No software updates are available.</string>
    <string name="STR_ACCESSORY_MODIFIED_TITLE_WATCH">Watch modified</string>
    <string name="STR_ACCESSORY_NO_UPDATABLE_VERSION">Your software is up to date.</string>
    <string name="STR_ACCESSORY_PROGRESS_MB_PER_MB">%1$s %2$s/%3$s %4$s</string>
    <string name="STR_ACCESSORY_SERVER_PARTIALLY_OPEN">Unable to download the software update. The server has reached its daily download limit. Try again later.</string>
    <string name="STR_ACCESSORY_UPDATE_FAILED_INVALID_DELTA">The downloaded file is invalid. Try downloading again.</string>
    <string name="STR_ACCESSORY_UPDATE_FAILED_TRY_LATER">Couldn\'t update software. Try again later.</string>
    <string name="STR_ACCESSORY_UPDATE_INFO">Software update information</string>
    <string name="STR_ACCESSORY_UPDATE_SIZE_MB">Size: %s MB</string>
    <string name="STR_ACCESSORY_UPDATE_SUCCESS">Software successfully updated.</string>
    <string name="STR_ACCESSORY_UPDATE_TITLE_EARBUDS">Earbuds software update</string>
    <string name="STR_ACCESSORY_UPDATE_TITLE_WATCH">Watch software update</string>
    <string name="STR_ACCESSORY_UPDATE_VERSION">Version: %s</string>
    <string name="STR_ACCESSORY_WHATS_NEW_SUBTITLE">Find out what\'s included in this update.</string>
    <string name="STR_ACCESSORY_WHATS_NEW_TITLE">What\'s new</string>
    <string name="STR_ADMIN_DM_TITLE">Device management</string>
    <string name="STR_ADMIN_PROFILE_NONE">None</string>
    <string name="STR_BTN_CANCEL">Cancel</string>
    <string name="STR_BTN_CONTINUE">Continue</string>
    <string name="STR_BTN_DOWNLOAD">Download</string>
    <string name="STR_BTN_EDIT">Edit</string>
    <string name="STR_BTN_GO_TO_STORAGE">Go to Storage</string>
    <string name="STR_BTN_INSTALL_NOW">Install now</string>
    <string name="STR_BTN_LATER">Later</string>
    <string name="STR_BTN_OK">OK</string>
    <string name="STR_BTN_SCHEDULE_INSTALL">Schedule install</string>
    <string name="STR_BTN_UPDATE">Update</string>
    <string name="STR_BTN_WIFI_SETTINGS">Wi-Fi settings</string>
    <string name="STR_BTN_YES">Yes</string>
    <string name="STR_COMMON_MEGA_BYTE">MB</string>
    <string name="STR_COMMON_PLEASE_WAIT">Please wait</string>
    <string name="STR_DM_CHECKING_UPDATE">Checking for updates…</string>
    <string name="STR_DM_CONNECTING_SERVER">Connecting to server…</string>
    <string name="STR_DM_CONNECTION_FAILED">Unable to update the software. A network or server error occurred. Try again later.</string>
    <string name="STR_DM_GENERAL_UPDATE_EXCEPTION_TITLE">Couldn\'t update software</string>
    <string name="STR_DM_UNABLE_NETWORK">No network connection</string>
    <string name="STR_NOTIFICATION_COPY_FAILED">Couldn\'t copy update.</string>
    <string name="STR_NOTIFICATION_DOWNLOAD_CONFIRM">A software update is available.</string>
    <string name="STR_NOTIFICATION_INSTALL_CONFIRM">A software update is ready to install.</string>
    <string name="STR_NOTIFICATION_INSTALL_CONFIRM_POSTPONE_SCHEDULE_INSTALL_WATCH">Couldn\'t update your watch because it was disconnected at the scheduled time. We\'ll try again in 24 hours.</string>
    <string name="STR_NOTIFICATION_INSTALL_CONFIRM_SCHEDULED">Update will be installed automatically at %1$s on %2$s.</string>
    <string name="STR_REGISTRATION_FAILED">Registration failed.</string>
    <string name="STR_REGISTRATION_SUCCESS">Device registered.</string>
    <string name="STR_ROAMING_WIFI_DISCONNECTED">Connect to Wi-Fi and try again.</string>
    <string name="STR_ROAMING_WIFI_DISCONNECTED_TITLE">Can\'t download updates while roaming</string>
    <string name="accessibility_close">Close</string>
    <string name="action_enabled_label">%s</string>
    <string name="double_tap_on">On</string>
    <string name="equalizer">Equalizer</string>
    <string name="read_notifications_aloud">Read notifications aloud</string>
    <string name="roboto_medium">sec-roboto-light</string>
    <string name="roboto_regular">sec-roboto-light</string>
    <string name="sesl_appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_ambient_sound">Ambient sound</string>
    <string name="settings_game_mode_desc">Minimize audio delay for vivid, synchronized gaming sound.</string>
    <string name="settings_game_mode_desc1">To get the best experience, keep your earbuds near your phone.</string>
    <string name="settings_game_mode_desc2">If you\'re in an environment with a lot of wireless devices, you may experience interference or choppy sound. You can go somewhere else, turn off some wireless devices, or turn off Gaming mode to resolve the issue.</string>
    <string name="settings_game_mode_title">Gaming mode</string>
    <string name="settings_seamless_connection">Seamless earbud connection</string>
    <string name="settings_touchpad_menu1">Block touches</string>
    <string name="settings_touchpad_option_menu">Touch and hold</string>
    <string name="settings_voice_wakeup_title">Bixby voice wake-up</string>
    <string name="vn_off">Off</string>
    <string name="vn_on">On</string>
</resources>