<?xml version="1.0" encoding="utf-8"?>
<actions xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <action category="galaxy_buds_plus" component="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineAmbientConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_buds_ambient_sound" label="@string/settings_ambient_sound" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="ambient"/>
    <action category="galaxy_buds_plus" component="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineEqualizerConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_buds_equalizer" label="@string/equalizer" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="equalizer"/>
    <action category="galaxy_buds_plus" component="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineNotificationConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_buds_notifications" label="@string/read_notifications_aloud" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="notifications"/>
    <action category="galaxy_buds_plus" component="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineLockTouchpadConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_buds_lock_touchpad" label="@string/settings_touchpad_menu1" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="lock_touchpad"/>
    <action category="galaxy_buds_plus" component="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineGamingModeConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_buds_gaming_mode" label="@string/settings_game_mode_title" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="gaming_mode"/>
    <action category="galaxy_buds_plus" component="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineActionProvider" config_activity="com.samsung.accessory.neobeanmgr.core.bixbyroutine.RoutineTouchpadOptionConfigActivity" enabled_label_format="@string/action_enabled_label" icon="@drawable/routines_ic_action_buds_touchpad" label="@string/settings_touchpad_option_menu" negative_enabled_label_format="@string/vn_off" support_negative="true" tag="touchpad_option"/>
</actions>
