<?xml version="1.0" encoding="utf-8"?>
<com.samsung.accessory.neobeanmgr.common.ui.RoundedCornerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_inline_cue" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="yes">
        <ImageView android:id="@+id/image_cancel" android:background="@drawable/background_default_ripple" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginTop="14dp" android:src="@drawable/fd_home_ic_cancle" android:tint="#fafafa" android:contentDescription="@string/accessibility_close" android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="15sp" android:textColor="#fafafa" android:id="@+id/text_description" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor " android:lineSpacingExtra="4sp" android:importantForAccessibility="no" android:fontFamily="@string/roboto_regular" android:layout_marginStart="24dp" app:layout_constraintEnd_toStartOf="@+id/image_cancel" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintWidth_max="-2"/>
        <TextView android:id="@+id/view_bottom_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="20dp" app:layout_constraintTop_toBottomOf="@+id/text_description"/>
        <TextView android:textSize="17sp" android:textStyle="bold" android:textColor="#f2f2f2" android:gravity="center" android:id="@+id/text_action" android:background="@drawable/background_flat_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="20dp" android:minHeight="36dp" android:text="Action" android:fontFamily="@string/roboto_medium" android:paddingStart="16dp" android:paddingEnd="16dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/text_description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.samsung.accessory.neobeanmgr.common.ui.RoundedCornerLayout>
