<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout android:id="@+id/app_bar" android:layout_width="match_parent" android:layout_height="match_parent" app:expanded="false" style="@style/Widget.Material.AppBarLayout">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@+id/collapsing_app_bar" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_scrollFlags="3" app:title="@string/settings_game_mode_title" style="@style/Widget.Material.CollapsingToolbar">
            <androidx.appcompat.widget.Toolbar android:theme="@style/Theme.AppCompat" android:layout_gravity="bottom" android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:layout_collapseMode="1" app:navigationIcon="?attr/homeAsUpIndicator" app:title="@string/settings_game_mode_title"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <com.samsung.accessory.neobeanmgr.common.ui.ResponsiveNestedScrollView android:layout_gravity="top|center_vertical|center_horizontal|center" android:id="@+id/nested_scroll" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/sesl_appbar_scrolling_view_behavior">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <com.samsung.accessory.neobeanmgr.common.ui.ResponsiveWidthLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerHorizontal="true">
                <com.samsung.accessory.neobeanmgr.common.ui.RoundedCornerLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <com.samsung.accessory.neobeanmgr.common.ui.RoundedCornerLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                            <FrameLayout android:id="@+id/layout_switch" android:layout_width="match_parent" android:layout_height="wrap_content">
                                <LinearLayout android:id="@+id/layout_gaming_mode_switch" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1" android:minHeight="@dimen/sub_app_bar_height">
                                    <RelativeLayout android:layout_gravity="center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                                        <androidx.appcompat.widget.SwitchCompat android:id="@+id/gaming_mode_switch" android:saveEnabled="false" android:layout_width="43dp" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="16dp" android:layout_marginEnd="24dp" android:layout_alignParentEnd="true"/>
                                        <TextView android:id="@+id/textview_on_off" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/double_tap_on" android:layout_centerVertical="true" android:layout_marginStart="@dimen/list_item_content_inset" android:layout_toStartOf="@+id/gaming_mode_switch" android:layout_alignParentStart="true" style="@style/ListItemTitleTextAppearance"/>
                                    </RelativeLayout>
                                </LinearLayout>
                            </FrameLayout>
                        </com.samsung.accessory.neobeanmgr.common.ui.RoundedCornerLayout>
                        <LinearLayout android:orientation="vertical" android:id="@+id/layout_gaming_modoe_desc" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/sub_header_height" android:importantForAccessibility="yes" android:paddingStart="24dp" android:paddingEnd="24dp">
                            <TextView android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_game_mode_desc" style="@style/LabsDescriptionTextAppearance"/>
                            <TextView android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/settings_game_mode_desc1" style="@style/LabsDescriptionTextAppearance"/>
                            <TextView android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/settings_game_mode_desc2" style="@style/LabsDescriptionTextAppearance"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.samsung.accessory.neobeanmgr.common.ui.RoundedCornerLayout>
            </com.samsung.accessory.neobeanmgr.common.ui.ResponsiveWidthLayout>
        </RelativeLayout>
    </com.samsung.accessory.neobeanmgr.common.ui.ResponsiveNestedScrollView>
    <ImageView android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end" android:layout_width="26dp" android:layout_height="26dp" android:src="@drawable/rc_top_left" app:layout_anchor="@+id/nested_scroll" app:layout_anchorGravity="800033"/>
    <ImageView android:layout_gravity="bottom|left|center_vertical|center_horizontal|center|start" android:layout_width="26dp" android:layout_height="26dp" android:src="@drawable/rc_top_right" app:layout_anchor="@+id/nested_scroll" app:layout_anchorGravity="800035"/>
    <ImageView android:layout_gravity="top|right|center_vertical|center_horizontal|center|end" android:layout_width="26dp" android:layout_height="26dp" android:src="@drawable/rc_bottom_left" app:layout_anchor="@+id/nested_scroll" app:layout_anchorGravity="800053"/>
    <ImageView android:layout_gravity="top|left|center_vertical|center_horizontal|center|start" android:layout_width="26dp" android:layout_height="26dp" android:src="@drawable/rc_bottom_right" app:layout_anchor="@+id/nested_scroll" app:layout_anchorGravity="800055"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
