<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/layout_middle_content_full" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/layout_middle_content_whatsnew" android:background="@drawable/fotaprovider_middle_content_rounded_corner_2nd_depth" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_middle_content_whatsnew_title" android:background="@drawable/fotaprovider_middle_content_rounded_corner" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false" style="@style/FotaProviderTheme.Layout.MiddleContent">
            <LinearLayout android:orientation="vertical" android:id="@+id/layout_middle_content_whatsnew_subheader" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" style="@style/FotaProviderTheme.Layout.SubHeader">
                <TextView android:id="@+id/textview_middle_content_whatsnew_title" android:text="@string/STR_ACCESSORY_WHATS_NEW_TITLE" style="@style/FotaProviderTheme.Widget.TextView.SubHeader.Whatsnew.Title"/>
                <TextView android:id="@+id/textview_middle_content_whatsnew_subtitle" android:text="@string/STR_ACCESSORY_WHATS_NEW_SUBTITLE" style="@style/FotaProviderTheme.Widget.TextView.MiddleContent.Text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/layout_middle_content_whatsnew_description" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FotaProviderTheme.Layout.MiddleContent">
            <TextView android:id="@+id/textview_middle_content_whatsnew_description" android:textDirection="locale" style="@style/FotaProviderTheme.Widget.TextView.MiddleContent.Whatsnew.Description"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/layout_middle_content_software_update_information" android:background="@drawable/fotaprovider_middle_content_rounded_corner" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/middle_content_margin_vertical_each" android:layout_below="@+id/layout_middle_content_whatsnew" style="@style/FotaProviderTheme.Layout.MiddleContent">
        <LinearLayout android:id="@+id/layout_middle_content_software_update_information_subheader" style="@style/FotaProviderTheme.Layout.SubHeader">
            <TextView android:id="@+id/textview_middle_content_software_update_information_title" android:text="@string/STR_ACCESSORY_UPDATE_INFO" style="@style/FotaProviderTheme.Widget.TextView.SubHeader.Title"/>
        </LinearLayout>
        <TextView android:id="@+id/textview_middle_content_software_update_information_version" style="@style/FotaProviderTheme.Widget.TextView.MiddleContent.Text"/>
        <TextView android:id="@+id/textview_middle_content_software_update_information_size" style="@style/FotaProviderTheme.Widget.TextView.MiddleContent.Text"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/layout_middle_content_caution" android:background="@drawable/fotaprovider_middle_content_rounded_corner" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/middle_content_margin_vertical_each" android:layout_below="@+id/layout_middle_content_software_update_information" style="@style/FotaProviderTheme.Layout.MiddleContent">
        <LinearLayout android:id="@+id/layout_middle_content_caution_subheader" style="@style/FotaProviderTheme.Layout.SubHeader">
            <TextView android:id="@+id/textview_middle_content_caution_title" android:text="@string/STR_ACCESSORY_CAUTION_TITLE" style="@style/FotaProviderTheme.Widget.TextView.SubHeader.Title"/>
        </LinearLayout>
        <TextView android:id="@+id/textview_middle_content_caution_text" style="@style/FotaProviderTheme.Widget.TextView.MiddleContent.Text"/>
    </LinearLayout>
</RelativeLayout>
